# ungar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UngarConfig.cmake.in
.github/workflows/: cmake.yml  ungar-ci.yml
cmake/: ungar_utils.cmake
example/: CMakeLists.txt  variable.example.cpp  variable_map.example.cpp
example/autodiff/: function.example.cpp
example/mpc/: quadrotor.example.cpp  quadruped.example.cpp  rc_car.example.cpp
example/rbd/: quantity.example.cpp  robot.example.cpp
include/ungar/: assert.hpp  data_types.hpp  mvariable.hpp  mvariable_lazy_map.hpp  variable.hpp  variable_lazy_map.hpp  variable_map.hpp
include/ungar/autodiff/: data_types.hpp  function.hpp  vector_composer.hpp
include/ungar/autodiff/support/: quaternion.hpp
include/ungar/io/: logging.hpp
include/ungar/optimization/: backtracking_line_search.hpp  concepts.hpp  soft_equality_constraint.hpp  soft_inequality_constraint.hpp  soft_sqp.hpp
include/ungar/rbd/: evaluator.hpp  getter.hpp  quantity.hpp  robot.hpp
include/ungar/rbd/quantities/: centroidal_momentum.hpp  centroidal_momentum_matrix.hpp  com_acceleration.hpp  com_position.hpp  com_velocity.hpp  composite_rigid_body_inertia.hpp  frames.hpp  generalized_accelerations.hpp  generalized_gravity.hpp  joint_space_inertia_matrix.hpp  joint_space_inertia_matrix_inverse.hpp  joint_torques.hpp  kinetic_energy.hpp  nonlinear_effects.hpp  potential_energy.hpp  quantities.hpp
include/ungar/utils/: defaulted.hpp  integral_map.hpp  passkey.hpp  utils.hpp
include/ungar/utils/macros/: for_each.hpp
test/: CMakeLists.txt  variable.test.cpp
test/autodiff/: function.test.cpp
test/optimization/: soft_sqp.test.cpp
test/rbd/: robot.test.cpp
test/utils/: utils.test.cpp
